--- a/modulo2.html
+++ b/modulo2.html
@@ -11,7 +11,7 @@
 <style>
      * {
             box-sizing: border-box;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Nunito', sans-serif;
         }
       h1.main-header-brand {
             display:inline-block;
